Current state of repo

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,7 +43,10 @@ span {
 		<div class="col-md-6">
 			<form class="form-inline">
 				<div class="form-group">
-					<label for="addChannelTextbox">Start</label>
+					<label for="populationTextbox">Population</label>
+					<input id="populationTextbox" type="text"></input>
+					<label for="tournamentsTextbox">Tournaments</label>
+					<input id="tournamentsTextbox" type="text"></input>
 				</div>
 				<button id="startButton" class="btn btn-default" type="submit">Send</button>
 				<p id="startText"></p>
